# patra-toolkit

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  LICENSE  MegaDetector.ipynb  README.md  Schema_Descriptions.md  ci-component.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  patra-ci.yml
docs/: conf.py  index.rst  requirements.txt  schema_description.md
docs/source/: modules.rst  patra_model_card.rst  patra_toolkit.rst
examples/model_cards/: CNN_Example_MC.json  HuggingFace_Transformer_Ex_MC.json  RF_sklearn_adult_MC.json  RF_sklearn_titanic_MC.json  SVM-UCIadult-Patra-model-card.json  flanT5_lora_finetuned_v2.json  pytorch_titanic_data.json  sklearn_adult_RF_MC.json  tensorflow_titanic_MC.json  tesorflow_adult_nn_MC.json
examples/notebooks/: CNN_Example.ipynb  GettingStarted.ipynb  HuggingFace Integration.ipynb  HuggingFace_Example.ipynb  HuggingFace_Transformer_Ex.ipynb  HuggingFace_retrain_module_ex.ipynb  MegaDetector.ipynb  PyTorch_Tutorial.ipynb  RF_sklearn_adult_data.ipynb  megaDet.ipynb  (+11 more)
exception/: patra_error.py
patra_model_card/: __init__.py  fairlearn_bias.py  patra_model_card.py  shap_xai.py  tf2-train-cnn-cifar.py
patra_toolkit/: __init__.py  artifact_storage.py  credentials.py  exceptions.py  fairlearn_bias.py  model_store.py  patra_model_card.py  shap_xai.py  storage_backend.py
tests/: requirements.txt  test.py  test_authenticate.py  test_huggingface_backend.py  test_modelstore_github.py  test_modelstore_huggingface.py  test_patra_hash_id.py  test_patra_inout_data.py  test_patra_mc.py  test_patra_unique_id.py
(+6 files in other folders)
