[tool.poetry]
name = "patra-toolkit"
version = "0.1.0"
description = "Patra Model Card Toolkit"
authors = ["Data to Insight Center <d2i@iu.edu>"]
license = "BSD-3-Clause"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
llvmlite = ">=0.37.0"
numba = ">=0.54.0"
attrs = ">=23.1.0,<23.2.0"
jsonschema = ">=4.18.6,<4.19.0"
fairlearn = ">=0.11.0,<0.12.0"
scipy = ">=1.13.1,<1.14.0"
scikit-learn = ">=1.5.0,<1.6.0"
shap = ">=0.46.0,<0.47.0"
pandas = ">=2.2.3,<2.3.0"
numpy = "<=2.1.3"
pyrsistent = ">=0.19.3,<0.20.0"
requests = ">=2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
